<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="25dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:src="@drawable/title"
            android:layout_weight="8"
            android:contentDescription="App Title" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moment_title"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/moment_title_hint"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewEditLocationDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_date"
        android:textStyle="bold"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextEditLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_place"
            android:inputType="text"
            android:minHeight="48dp"
            android:gravity="center"
            tools:ignore="Autofill,TextContrastCheck" />

        <EditText
            android:id="@+id/editTextEditDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_date"
            android:inputType="date"
            android:focusableInTouchMode="false"
            android:minHeight="48dp"
            android:gravity="center"
            tools:ignore="Autofill,TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextEditDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewEditStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_your_experience"
        android:textStyle="bold"
        android:textSize="20sp" />

    <RatingBar
        android:id="@+id/ratingBarEditStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update"
            android:layout_marginHorizontal="5dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:layout_marginHorizontal="5dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginHorizontal="5dp"
        tools:ignore="ButtonStyle" />

</LinearLayout>
