<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="8"
            android:contentDescription="App Title"
            app:srcCompat="@drawable/title"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moment_title"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/moment_title_hint"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Autofill,TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textViewLocationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_date"
                android:textStyle="bold"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_place"
                    android:inputType="text"
                    android:minHeight="48dp"
                    tools:ignore="Autofill,TextContrastCheck" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/enter_date"
                    android:inputType="date"
                    android:focusableInTouchMode="false"
                    android:minHeight="48dp"
                    tools:ignore="Autofill,TextContrastCheck" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textStyle="bold"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                tools:ignore="Autofill,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <TextView
                android:id="@+id/textViewStars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_your_experience"
                android:textStyle="bold"
                android:textSize="20sp" />

            <RatingBar
                android:id="@+id/ratingBarStars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonInsert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/insert"
                    android:layout_marginHorizontal="5dp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonShowList"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back_to_mainpage"
                    android:layout_marginHorizontal="5dp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
